--- a/assignments/assignment02.css
+++ b/assignments/assignment02.css
@@ -1,1 +1,53 @@
+/* file: assignment02.css
+	author: adam cossin
+*/ 
 
+body {
+	background-color:skyblue;
+}
+#igottabeme {
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+p.classy {
+	margin-left:10px;
+}
+
+div {
+	margin-bottom: 50px;
+}
+
+span {
+	display: inline-block;
+	width: 100px;
+	height: 50px;
+	padding-bottom: 5px;
+	padding-top: 5px;
+	padding-left: 20px;
+	padding-right: 20px;
+	background-color: yellow;
+	border-style: solid;
+	border-color:blue;
+	border-width:5px;
+}
+
+/* --- pre-existing css --- */
+.stripey tr:nth-child(even) {
+  background-color: gray;
+}
+.stripey tr:nth-child(odd) {
+  background-color: white;
+}
+.stripey th {
+  color: white;
+  background-color: black;
+}
+.mousey td:hover {
+  background-color: yellow;
+}
+.rightey td {
+  text-align: right;
+}
+input[type="text"].pinkey:focus {
+  background-color: pink;
+}
